--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory
           root: .
+          paths:
+            - *
 
   test:
     machine: true
