--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
       - checkout
       # Build
       - run: ./build.sh
-      
+      - store_artifacts:
+          path: ./output
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory
           root: .
@@ -24,6 +25,27 @@ jobs:
       - run:
           name: Unit tests
           command: ./test.sh
+      - store_test_results:
+          path: ./output/junit.xml
+          
+  acceptance_test:
+    machine: true
+    steps:
+      - attach_workspace:
+          # Must be absolute path or relative path from working_directory
+          at: .
+      - run: cp ./output/summon-linux-amd64 summon
+      - run: cd acceptance; make
+
+  package:
+    machine: true
+    steps:
+      - attach_workspace:
+          # Must be absolute path or relative path from working_directory
+          at: .
+      - run: ./package.sh
+      - store_artifacts:
+          path: ./output/dist/*
 
 workflows:
   version: 2
@@ -33,3 +55,9 @@ workflows:
       - test:
           requires:
             - build
+      - acceptance_test:
+          requires:
+            - test
+      - package:
+          requires:
+            - acceptance_test
