get some junit in the acceptance

--- a/acceptance/Makefile
+++ b/acceptance/Makefile
@@ -5,4 +5,4 @@ TEST_HARNESS = conjurinc/summon-acceptance:v1
 TTY_MODE := $(shell tty -s && echo -t)
 
 cucumber:
-	docker run --rm $(TTY_MODE) -v $(PWD):/cukes -v $(PWD)/../summon:/cukes/bin/summon -w /cukes $(TEST_HARNESS) cucumber
+	docker run --rm $(TTY_MODE) -v $(PWD):/cukes -v $(PWD)/../summon:/cukes/bin/summon -w /cukes $(TEST_HARNESS) docker run --rm $(TTY_MODE) -v $(PWD):/cukes -v $(PWD)/../summon:/cukes/bin/summon -w /cukes $(TEST_HARNESS) cucumber --format junit --out reports --format pretty
