collect acceptance junit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,8 @@ jobs:
           at: .
       - run: cp ./output/summon-linux-amd64 summon
       - run: cd acceptance; make
+      - store_test_results:
+          path: ./reports
 
   package:
     machine:
