--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,13 @@ services:
     environment:
       GOOS:
       GOARCH:
+
+  ubuntu-16.04:
+    image: ubuntu:16.04
+    volumes:
+      - ./install.sh:/tmp/install.sh
+
+  ubuntu-14.04:
+    image: ubuntu:14.04
+    volumes:
+      - ./install.sh:/tmp/install.sh
