Run gosec security tests in jenkins

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,14 @@ services:
       GOOS:
       GOARCH:
 
+  gosec-tester:
+    build:
+      context: .
+      dockerfile: Dockerfile.gosec
+    working_dir: /go/src/github.com/cyberark/summon
+    volumes:
+      - .:/go/src/github.com/cyberark/summon
+
   ubuntu-16.04:
     image: ubuntu:16.04
     volumes:
