Fixed up the acceptance tests
We no longer need the manual docker image nor the odd makefile. We now
also collect the result files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-output/
+output/**/*
 dist/
 acceptance/tmp
 *.tmp
@@ -17,6 +17,10 @@ Godeps/
 
 # Vim editor tempfiles
 *.sw[po]
+
+# Keep of force-saved dirs
+# TODO: Figure out why Jenkins can't create dirs for these
+!**/.keep
 
 # Created by https://www.gitignore.io
 
