Update goreleaser config
Revise deprecated fields and update Jenkinsfile to set GITHUB_TOKEN before
running build

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,45 +18,46 @@ builds:
   ldflags: []
   main: ./cmd/main.go
 
-archive:
-  name_template: "{{.ProjectName}}-{{.Os}}-{{.Arch}}"
-  format_overrides:
-  - goos: windows
-    format: zip
-  files:
-    - none*  # only package the binary - not defaults: readme, license, changelog
+archives:
+  - id: summon-release-archive
+    name_template: "{{.ProjectName}}-{{.Os}}-{{.Arch}}"
+    format_overrides:
+    - goos: windows
+      format: zip
+    files:
+      - none*  # only package the binary - not defaults: readme, license, changelog
 
 checksum:
   name_template: 'SHA256SUMS.txt'
 
-brew:
-  description: CLI that provides on-demand secrets access for common DevOps tools.
-  homepage: https://github.com/cyberark/summon
-  url_template: https://github.com/cyberark/summon/releases/download/v{{.Version}}/summon-darwin-amd64.tar.gz
-  install: |
-    bin.install "summon"
-  test: |
-    system "#{bin}/summon", "-v"
+brews:
+  - description: CLI that provides on-demand secrets access for common DevOps tools.
+    homepage: https://github.com/cyberark/summon
+    url_template: https://github.com/cyberark/summon/releases/download/v{{.Version}}/summon-darwin-amd64.tar.gz
+    install: |
+      bin.install "summon"
+    test: |
+      system "#{bin}/summon", "-v"
 
-  github:
-    owner: cyberark
-    name: homebrew-tools
-  skip_upload: true
+    github:
+      owner: cyberark
+      name: homebrew-tools
+    skip_upload: true
 
-nfpm:
-  name_template: "{{.ProjectName}}"
-  vendor: CyberArk
-  homepage: https://github.com/cyberark/summon
-  maintainer: Dustin Collins <dustin.collins@cyberark.com>
+nfpms:
+  - name_template: "{{.ProjectName}}"
+    vendor: CyberArk
+    homepage: https://github.com/cyberark/summon
+    maintainer: Dustin Collins <dustin.collins@cyberark.com>
 
-  description: CLI that provides on-demand secrets access for common DevOps tools.
-  recommends:
-    - summon-conjur
-  license: MIT
-  formats:
-  - deb
-  - rpm
-  bindir: /usr/local/bin
+    description: CLI that provides on-demand secrets access for common DevOps tools.
+    recommends:
+      - summon-conjur
+    license: MIT
+    formats:
+    - deb
+    - rpm
+    bindir: /usr/local/bin
 
 release:
   disable: true
