--- a/build
+++ b/build
@@ -2,8 +2,11 @@
 
 git fetch --tags  # jenkins does not do this automatically yet
 
-docker pull goreleaser/goreleaser
+GORELEASER_IMAGE="goreleaser/goreleaser:latest-cgo"
+
+docker pull "$GORELEASER_IMAGE"
 
 docker run --rm \
            -v "$PWD:/summon" \
-           -w /summon goreleaser/goreleaser release --rm-dist --skip-validate
+           -w /summon \
+           "$GORELEASER_IMAGE" release --rm-dist --skip-validate
