Fixed Goreleaser nfpm parameter usage
Old name_template is removed and has been replaced by
file_name_template so this commit updates it. We also now provide a
version and arch in the deb/rpm name since those are pretty valuable
pieces of info for an operator.

Fixes #145

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -61,7 +61,7 @@ brews:
     skip_upload: true
 
 nfpms:
-  - name_template: "{{.ProjectName}}"
+  - file_name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Arch }}"
     vendor: CyberArk
     homepage: https://github.com/cyberark/summon
     maintainer: Dustin Collins <dustin.collins@cyberark.com>
