--- a/Dockerfile.acceptance
+++ b/Dockerfile.acceptance
@@ -2,6 +2,7 @@ FROM golang:1.15-alpine
 
 RUN apk add --no-cache bash \
                        build-base \
+                       docker-cli \
                        git \
                        libffi-dev \
                        ruby-bundler \
