Update goreleaser brew.github to brew.tap
Support for brews.github was removed in v0.152.0: https://goreleaser.com/deprecations/#brewsgithub

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -56,7 +56,7 @@ brews:
     test: |
       system "#{bin}/summon", "-v"
 
-    github:
+    tap:
       owner: cyberark
       name: homebrew-tools
     skip_upload: true
