Add CI pipeline via Github Actions
Github Action runs are public which provides much needed visibility into the build status.

--- a/build
+++ b/build
@@ -9,4 +9,4 @@ docker pull "$GORELEASER_IMAGE"
 docker run --rm \
            -v "$PWD:/summon" \
            -w /summon \
-           "$GORELEASER_IMAGE" release --rm-dist --skip-validate
+           "$GORELEASER_IMAGE" release --rm-dist "$@"
