--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           submodules: recursive
       - name: Build Go package (release snapshot)
-        run: ./build --snapsot
+        run: ./build --snapshot
         if:  ${{ startsWith(github.ref, 'refs/tags/v') }}
       - name: Build Go package (snapshot)
         run: ./build --snapshot
