CI failing due to new goreleaser artifacts.json
Goreleaser has added a new file in the dist/goreleaser
directory that is not readable.

--- a/build
+++ b/build
@@ -13,8 +13,9 @@ git fetch --tags  # jenkins does not do this automatically yet
 docker pull "${GORELEASER_IMAGE}"
 docker run --rm -t \
   --env GITHUB_TOKEN \
+  --entrypoint "/sbin/tini" \
   -v "$CURRENT_DIR:$MOUNT_DIR" \
   -w "$MOUNT_DIR" \
-  "${GORELEASER_IMAGE}" --rm-dist "$@"
+  "${GORELEASER_IMAGE}" -- sh -c "/entrypoint.sh --rm-dist $@ && rm ./dist/goreleaser/artifacts.json"
 
 echo "Releases built. Archives can be found in dist/goreleaser"
