--- a/examples/docker/secrets.yml
+++ b/examples/docker/secrets.yml
@@ -1,3 +1,3 @@
 AWS_ACCESS_KEY_ID: !var $env/aws_access_key_id
-AWS_SECRET_ACCESS_KEY: !var $env/mongodb_password
-MONGODB_PASSWORD: !var $env/aws_secret_access_key
+AWS_SECRET_ACCESS_KEY: !var $env/aws_secret_access_key
+MONGODB_PASSWORD: !var $env/mongodb_password
