--- a/build
+++ b/build
@@ -8,7 +8,7 @@ MOUNT_DIR="/summon"
 
 GORELEASER_IMAGE="goreleaser/goreleaser:latest"
 
-git fetch --tags  # jenkins does not do this automatically yet
+git fetch --tags -f  # jenkins does not do this automatically yet
 
 docker pull "${GORELEASER_IMAGE}"
 docker run --rm -t \
