CONJSE-1842: Update to Go 1.22

--- a/build
+++ b/build
@@ -11,12 +11,13 @@ GORELEASER_IMAGE="goreleaser/goreleaser:latest"
 docker pull "${GORELEASER_IMAGE}"
 docker run --rm -t \
   --env GITHUB_TOKEN \
+  --env GOTOOLCHAIN=auto \
   --entrypoint "/sbin/tini" \
   -v "$CURRENT_DIR:$MOUNT_DIR" \
   -w "$MOUNT_DIR" \
   "${GORELEASER_IMAGE}" \
   -- sh -c "git config --global --add safe.directory /summon && \
-    /entrypoint.sh --rm-dist $@ && \
+    /entrypoint.sh --clean $@ && \
     rm ./dist/goreleaser/artifacts.json"
 
 echo "Releases built. Archives can be found in dist/goreleaser"
