--- a/build
+++ b/build
@@ -1,5 +1,22 @@
 #!/bin/bash -e
 
+function repo_root() {
+  git rev-parse --show-toplevel
+}
+
+function project_version() {
+  # VERSION derived from CHANGELOG and automated release library
+  echo "$(<"$(repo_root)/VERSION")"
+}
+
+function project_semantic_version() {
+  local version
+  version="$(project_version)"
+
+  # Remove Jenkins build number from VERSION
+  echo "${version/-*/}"
+}
+
 CURRENT_DIR=$(pwd)
 
 echo "Current dir: $CURRENT_DIR"
@@ -8,10 +25,13 @@ MOUNT_DIR="/summon"
 
 GORELEASER_IMAGE="goreleaser/goreleaser:latest"
 
+VERSION="$(project_semantic_version)"
+
 docker pull "${GORELEASER_IMAGE}"
 docker run --rm -t \
   --env GITHUB_TOKEN \
   --env GOTOOLCHAIN=auto \
+  --env VERSION="${VERSION}" \
   --entrypoint "/sbin/tini" \
   -v "$CURRENT_DIR:$MOUNT_DIR" \
   -w "$MOUNT_DIR" \
