CNJR-11677: Remove -SNAPSHOT-commit- tag from deb & rmp package filename

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -122,6 +122,9 @@ brews:
       name: homebrew-tools
     skip_upload: true
 
+snapshot:
+  version_template: "{{ .Version }}"
+
 nfpms:
   - file_name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Arch }}"
     vendor: CyberArk
